--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,5 @@
-/* TODO Add site wide styles */
+body {
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: center;
+}
