--- a/react-app/src/components/Restaurant/Restaurant.css
+++ b/react-app/src/components/Restaurant/Restaurant.css
@@ -16,6 +16,8 @@
     padding: 20px;
     margin:auto;
     width: 900px;
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease;
 }
 
 .restaurant-card:hover {
