--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -183,10 +183,21 @@ a.visited {
   margin: 20px;
   margin-left: 30px;
   margin-right: 20px;
+  color: #2d2e2f;
+  background-color: initial;
+  border: 1px solid #d3d3d3;
+  border-radius: 5px;
+  font-weight: 700;
+  text-align: center;
+  font-size: 16px;
+  transition: 0.5s;
 }
 
+
+
 .profdropdownbutt:hover {
-  background-color: rgb(226, 13, 13);
-  color: white;
+  /* background-color: rgb(226, 13, 13); */
+  background-color: #e6e6e6;
+  /* color: white; */
   cursor: pointer;
 }
