--- a/react-app/src/components/SingleRestaurant/SingleRestaurant.css
+++ b/react-app/src/components/SingleRestaurant/SingleRestaurant.css
@@ -38,7 +38,7 @@
     margin: 50px;
 }
 
-.see-all-photo {
+.see-all-photos button {
     position: absolute;
     bottom: 50px;
     right: 50px;
@@ -49,6 +49,10 @@
     padding: 12px 32px 12px 32px;
     border: 4px solid white;
     border-radius: 4px;
+}
+
+.see-all-photos button:hover {
+    cursor: pointer;
 }
 
 h1 {
@@ -74,6 +78,22 @@ h1 {
     margin: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid rgb(211, 211, 211);
+}
+
+.buttons button {
+    color: #2d2e2f;
+    background-color: initial;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
+    font-weight: 700;
+    text-align: center;
+    font-size: 16px;
+    transition: 0.5s;
+}
+
+.buttons button:hover {
+    cursor: pointer;
+    background-color: #e6e6e6;
 }
 
 .bottom-section {
@@ -189,4 +209,8 @@ a {
 .address-icon_svg {
     position: relative;
     bottom: 10px;
+}
+
+button:hover {
+    cursor: pointer;
 }
