--- a/react-app/src/components/UserPage/UserProfilePage.css
+++ b/react-app/src/components/UserPage/UserProfilePage.css
@@ -57,6 +57,19 @@
 
 .update-userprofile button {
     width: 140px;
+    color: #2d2e2f;
+    background-color: initial;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
+    font-weight: 700;
+    text-align: center;
+    font-size: 16px;
+    transition: 0.5s;
+}
+
+.update-userprofile button:hover {
+    cursor: pointer;
+    background-color: #e6e6e6;
 }
 
 .profpic {
