--- a/react-app/src/components/SearchBar/SearchBar.css
+++ b/react-app/src/components/SearchBar/SearchBar.css
@@ -1,10 +1,11 @@
-a:visited { text-decoration: none; }
+a:visited {
+    text-decoration: none;
+}
 
 
 a:link {
     text-decoration: none;
     display: flex;
-    padding: 10px;
 }
 
 .search-restaurants-container {
